# clipstory

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  clipboard-history  com.github.gylangsatria.clipboard-history.json  com.github.gylangsatria.clipboard-history.yml  com.github.gylangsatria.clipstory.yml  dev-setup.sh  meson.build
.github/workflows/: flatpak-build.yml
data/: clipboard-history-autostart.desktop  com.github.gylangsatria.clipboard-history-autostart.desktop  com.github.gylangsatria.clipboard-history.desktop  com.github.gylangsatria.clipboard-history.metainfo.xml  com.github.gylangsatria.clipstory.desktop  com.github.gylangsatria.clipstory.metainfo.xml
deb-package/DEBIAN/: control
deb-package/etc/xdg/autostart/: clipboard-history-autostart.desktop  com.github.gylangsatria.clipboard-history-autostart.desktop
deb-package/usr/share/applications/: clipboard-history.desktop  com.github.gylangsatria.clipboard-history.desktop
src/: clipboard-history.vala  main.vala  window.vala
